--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sourcemapped-stacktrace-test",
-  "version": "2.1.9",
+  "version": "2.1.10",
   "homepage": "https://github.com/marcoandre1/sourcemapped-stacktrace-node",
   "license": "BSD-3-Clause",
   "engines": {
@@ -12,7 +12,7 @@
   },
   "contributors": [
     "stereobooster <stereobooster@gmail.com>",
-    "marcoandre1"
+    "marcoandre1 <hello@modokemdev.com>"
   ],
   "main": "src/indexNode.js",
   "files": [
