--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/stereobooster/sourcemapped-stacktrace"
+    "url": "https://github.com/marcoandre1/sourcemapped-stacktrace-node"
   },
   "scripts": {
     "precommit": "prettier --write *.{js,json,css} && prettier --write {tests,src}/*.{js,json,css}",
